force-app/main/default/objects/Crop_Cycle__c/Crop_Cycle__c.object-meta.xml
<CustomObject>
    <description>Represents a single planting cycle for a specific crop within a farm bed.</description>
    <label>Crop Cycle</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Crop Cycle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crop Cycles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>