force-app/main/default/objects/Crop_Cycle__c/fields/Actual_Harvest_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Harvest_Date__c</fullName>
    <label>Actual Harvest Date</label>
    <type>Date</type>
</CustomField>