force-app/main/default/objects/Crop_Cycle__c/fields/Actual_Yield_kg__c.field-meta.xml
<CustomField>
    <fullName>Actual_Yield_kg__c</fullName>
    <label>Actual Yield (kg)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>