force-app/main/default/objects/Crop_Cycle__c/fields/Crop_Type__c.field-meta.xml
<CustomField>
    <fullName>Crop_Type__c</fullName>
    <description>The specific type of crop being grown.</description>
    <label>Crop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tomato</fullName>
            </value>
            <value>
                <fullName>Wheat</fullName>
            </value>
            <value>
                <fullName>Corn</fullName>
            </value>
            <value>
                <fullName>Rice</fullName>
            </value>
            <value>
                <fullName>Potato</fullName>
            </value>
            <value>
                <fullName>Sweet Potato</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>