force-app/main/default/objects/Crop_Cycle__c/fields/Days_to_Harvest__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Harvest__c</fullName>
    <description>Calculated as Harvest Date minus Planting Date.</description>
    <formula>Harvest_Date__c - Planting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Harvest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>