force-app/main/default/objects/Crop_Cycle__c/fields/Expected_Harvest_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Harvest_Date__c</fullName>
    <label>Expected Harvest Date</label>
    <type>Date</type>
</CustomField>