force-app/main/default/objects/Crop_Cycle__c/fields/Expected_Yield_kg__c.field-meta.xml
<CustomField>
    <fullName>Expected_Yield_kg__c</fullName>
    <label>Expected Yield (kg)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>