force-app/main/default/objects/Crop_Cycle__c/fields/Farm_Bed__c.field-meta.xml
<CustomField>
    <fullName>Farm_Bed__c</fullName>
    <description>The farm bed where this crop cycle is taking place.</description>
    <label>Farm Bed</label>
    <referenceTo>Farm_Bed__c</referenceTo>
    <relationshipLabel>Crop Cycles</relationshipLabel>
    <relationshipName>Crop_Cycles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>