force-app/main/default/objects/Crop_Cycle__c/fields/Harvest_Date__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Date__c</fullName>
    <description>The date on which the crop is expected to be harvested.</description>
    <label>Harvest Date</label>
    <type>Date</type>
</CustomField>