force-app/main/default/objects/Crop_Cycle__c/fields/Net_Profit__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit__c</fullName>
    <description>Calculated as Total Revenue minus Total Input Cost.</description>
    <formula>Total_Revenue__c - Total_Input_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>