force-app/main/default/objects/Crop_Cycle__c/fields/Planting_Date__c.field-meta.xml
<CustomField>
    <fullName>Planting_Date__c</fullName>
    <description>The date on which the crop cycle was planted.</description>
    <label>Planting Date</label>
    <type>Date</type>
</CustomField>