force-app/main/default/objects/Crop_Cycle__c/fields/Quantity_Planted__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Planted__c</fullName>
    <label>Quantity Planted</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>