force-app/main/default/objects/Crop_Cycle__c/fields/ROI_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ROI_Percentage__c</fullName>
    <description>Calculated as (Total Revenue - Total Input Cost) / Total Input Cost.</description>
    <formula>IF(Total_Input_Cost__c &gt; 0, (Total_Revenue__c - Total_Input_Cost__c) / Total_Input_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>