force-app/main/default/objects/Crop_Cycle__c/fields/Total_Input_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Input_Cost__c</fullName>
    <description>The sum of all expenses associated with this crop cycle.</description>
    <label>Total Input Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>