force-app/main/default/objects/Crop_Cycle__c/fields/Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measurement__c</fullName>
    <label>Unit of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>Units</fullName>
            </value>
            <value>
                <fullName>Tonnes</fullName>
            </value>
            <value>
                <fullName>Cuttings</fullName>
            </value>
            <value>
                <fullName>Saplings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>