force-app/main/default/objects/Crop_Cycle__c/validationRules/Expected_Harvest_After_Planting.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Harvest_After_Planting</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(Expected_Harvest_Date__c)), Expected_Harvest_Date__c &lt;= Planting_Date__c )</errorConditionFormula>
    <errorDisplayField>Expected_Harvest_Date__c</errorDisplayField>
    <errorMessage>Expected harvest date must be after planting date.</errorMessage>
</ValidationRule>