force-app/main/default/objects/Crop_Cycle__c/validationRules/Harvest_After_Planting.validationRule-meta.xml
<ValidationRule>
    <fullName>Harvest_After_Planting</fullName>
    <active>true</active>
    <description>Harvest dates must come after planting date</description>
    <errorConditionFormula>AND( NOT(ISBLANK(Actual_Harvest_Date__c)), Actual_Harvest_Date__c &lt; Planting_Date__c )</errorConditionFormula>
    <errorDisplayField>Actual_Harvest_Date__c</errorDisplayField>
    <errorMessage>Harvest date cannot be before planting date. Please check your dates.</errorMessage>
</ValidationRule>