force-app/main/default/objects/Crop_Cycle__c/listViews/Active_Cycles.listView-meta.xml
<ListView>
    <fullName>Active_Cycles</fullName>
    <columns>NAME</columns>
    <columns>Crop_Type__c</columns>
    <columns>Variety__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Planted,Growing,Flowering,Fruiting</value>
    </filters>
    <label>Active Cycles</label>
</ListView>