force-app/main/default/objects/Crop_Cycle__c/listViews/Completed_This_Month.listView-meta.xml
<ListView>
    <fullName>Completed_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Crop_Type__c</columns>
    <columns>Actual_Harvest_Date__c</columns>
    <columns>Net_Profit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Actual_Harvest_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Completed This Month</label>
</ListView>