force-app/main/default/objects/Crop_Cycle__c/listViews/Ready_to_Harvest.listView-meta.xml
<ListView>
    <fullName>Ready_to_Harvest</fullName>
    <columns>NAME</columns>
    <columns>Crop_Type__c</columns>
    <columns>Expected_Harvest_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready for Harvest</value>
    </filters>
    <label>Ready to Harvest</label>
</ListView>